Release LevelBorder v1.1